package edu.najah.cap.advance.assignments.assignment2.new_code.strategy;

import edu.najah.cap.advance.assignments.assignment2.new_code.Event;

public interface EventStrategy {
    void execute(Event event);
}
